hphp/test/slow/types/reserved_type_in_a_namespace.php.expectf
Fatal error: Cannot use `int` as a type name as it is reserved in %s on line 4
